<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <PreferenceCategory
    android:layout="@layout/preference_category_layout"
    android:title="@string/preferences_general_category_title">

    <ListPreference
      android:key="@string/preferences_location_source_key"
      android:layout="@layout/preference_with_summary_layout"
      android:title="@string/preferences_location_source_label"
      app:useSimpleSummaryProvider="true" />

    <EditTextPreference
      android:defaultValue="@string/default_simulation_channel"
      android:dialogMessage="@string/preferences_update_simulation_channel_name_message"
      android:dialogTitle="@string/preferences_update_simulation_channel_name_label"
      android:inputType="text"
      android:key="@string/preferences_simulation_channel_name_key"
      android:layout="@layout/preference_with_summary_layout"
      android:persistent="true"
      android:title="@string/preferences_update_simulation_channel_name_label"
      app:useSimpleSummaryProvider="true" />

    <ListPreference
      android:key="@string/preferences_s3_file_key"
      android:layout="@layout/preference_with_summary_layout"
      android:title="@string/preferences_s3_file_label"
      app:useSimpleSummaryProvider="true" />

    <ListPreference
      android:key="@string/preferences_routing_profile_key"
      android:layout="@layout/preference_with_summary_layout"
      android:title="@string/preferences_routing_profile_label"
      app:useSimpleSummaryProvider="true" />

  </PreferenceCategory>

  <PreferenceCategory
    android:layout="@layout/preference_category_layout"
    android:title="@string/preferences_resolution_category_title">

    <ListPreference
      android:key="@string/preferences_resolution_accuracy_key"
      android:layout="@layout/preference_with_summary_layout"
      android:title="@string/preferences_resolution_accuracy_label"
      app:useSimpleSummaryProvider="true" />

    <EditTextPreference
      android:dialogMessage="@string/preferences_update_resolution_desired_interval_message"
      android:dialogTitle="@string/preferences_update_resolution_desired_interval_title"
      android:key="@string/preferences_resolution_desired_interval_key"
      android:layout="@layout/preference_with_summary_layout"
      android:title="@string/preferences_resolution_desired_interval_label"
      app:useSimpleSummaryProvider="true" />

    <EditTextPreference
      android:dialogMessage="@string/preferences_update_resolution_minimum_displacement_message"
      android:dialogTitle="@string/preferences_update_resolution_minimum_displacement_title"
      android:key="@string/preferences_resolution_minimum_displacement_key"
      android:layout="@layout/preference_with_summary_layout"
      android:title="@string/preferences_resolution_minimum_displacement_label"
      app:useSimpleSummaryProvider="true" />

  </PreferenceCategory>

  <PreferenceCategory
    android:layout="@layout/preference_category_layout"
    android:title="@string/preferences_constant_resolution_category_title">

    <SwitchPreferenceCompat
      android:defaultValue="false"
      android:key="@string/preferences_enable_constant_resolution_key"
      android:layout="@layout/switch_preference_layout"
      android:title="@string/preferences_enable_constant_resolution_label" />

    <ListPreference
      android:key="@string/preferences_constant_resolution_accuracy_key"
      android:layout="@layout/preference_with_summary_layout"
      android:title="@string/preferences_resolution_accuracy_label"
      app:useSimpleSummaryProvider="true" />

    <EditTextPreference
      android:dialogMessage="@string/preferences_update_resolution_desired_interval_message"
      android:dialogTitle="@string/preferences_update_resolution_desired_interval_title"
      android:key="@string/preferences_constant_resolution_desired_interval_key"
      android:layout="@layout/preference_with_summary_layout"
      android:title="@string/preferences_resolution_desired_interval_label"
      app:useSimpleSummaryProvider="true" />

    <EditTextPreference
      android:dialogMessage="@string/preferences_update_resolution_minimum_displacement_message"
      android:dialogTitle="@string/preferences_update_resolution_minimum_displacement_title"
      android:key="@string/preferences_constant_resolution_minimum_displacement_key"
      android:layout="@layout/preference_with_summary_layout"
      android:title="@string/preferences_resolution_minimum_displacement_label"
      app:useSimpleSummaryProvider="true" />

  </PreferenceCategory>

  <PreferenceCategory
    android:layout="@layout/preference_category_layout"
    android:title="@string/preferences_debug_category_title">

    <SwitchPreferenceCompat
      android:defaultValue="false"
      android:key="@string/preferences_send_raw_locations_key"
      android:layout="@layout/switch_preference_layout"
      android:title="@string/preferences_send_raw_locations_label" />

    <SwitchPreferenceCompat
      android:defaultValue="true"
      android:key="@string/preferences_send_resolution_key"
      android:layout="@layout/switch_preference_layout"
      android:title="@string/preferences_send_resolution_label" />

    <SwitchPreferenceCompat
      android:defaultValue="true"
      android:key="@string/preferences_enable_predictions_key"
      android:layout="@layout/switch_preference_layout"
      android:title="@string/preferences_enable_predictions_label" />

  </PreferenceCategory>

</PreferenceScreen>
