<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/appTitleTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="@string/trackable_details"
    android:textColor="#DE7C31"
    android:textSize="30sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/ablyConnectionStatusImageView"
    android:layout_width="100dp"
    android:layout_height="44dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="50dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appTitleTextView"
    app:srcCompat="@drawable/status_background"
    app:tint="@color/ably_status_offline" />

  <TextView
    android:id="@+id/ablyConnectionStatusValueTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/offline"
    android:textAllCaps="true"
    android:textColor="@color/black"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@id/ablyConnectionStatusImageView"
    app:layout_constraintEnd_toEndOf="@id/ablyConnectionStatusImageView"
    app:layout_constraintStart_toStartOf="@id/ablyConnectionStatusImageView"
    app:layout_constraintTop_toTopOf="@id/ablyConnectionStatusImageView" />

  <TextView
    android:id="@+id/ablyConnectionStatusLabelTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/ably_connection_status_label"
    android:textColor="@color/black"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@id/ablyConnectionStatusImageView"
    app:layout_constraintStart_toStartOf="@id/stopTrackingButton"
    app:layout_constraintTop_toTopOf="@id/ablyConnectionStatusImageView" />

  <TextView
    android:id="@+id/locationSourceLabelTextView"
    android:layout_width="wrap_content"
    android:layout_height="44dp"
    android:layout_marginTop="16dp"
    android:gravity="center"
    android:text="@string/location_source_label"
    android:textColor="@color/black"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@+id/ablyConnectionStatusLabelTextView"
    app:layout_constraintTop_toBottomOf="@+id/ablyConnectionStatusLabelTextView" />

  <TextView
    android:id="@+id/locationSourceMethodTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/black"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@id/locationSourceLabelTextView"
    app:layout_constraintEnd_toEndOf="@id/ablyConnectionStatusImageView"
    app:layout_constraintStart_toStartOf="@id/ablyConnectionStatusImageView"
    app:layout_constraintTop_toTopOf="@id/locationSourceLabelTextView"
    tools:text="PHONE" />

  <TextView
    android:id="@+id/currentLocationAndBearingTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/current_location_and_bearing"
    android:textColor="@color/black"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@id/locationSourceLabelTextView"
    app:layout_constraintTop_toBottomOf="@+id/locationSourceLabelTextView" />

  <TextView
    android:id="@+id/latitudeLabelTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:text="@string/latitude_label"
    app:layout_constraintStart_toStartOf="@+id/currentLocationAndBearingTextView"
    app:layout_constraintTop_toBottomOf="@+id/currentLocationAndBearingTextView" />

  <TextView
    android:id="@+id/latitudeValueTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="@+id/latitudeLabelTextView"
    app:layout_constraintStart_toEndOf="@+id/latitudeLabelTextView"
    tools:text="10.234" />

  <TextView
    android:id="@+id/longitudeLabelTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:text="@string/longitude_label"
    app:layout_constraintStart_toStartOf="@+id/latitudeLabelTextView"
    app:layout_constraintTop_toBottomOf="@+id/latitudeLabelTextView" />

  <TextView
    android:id="@+id/longitudeValueTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="@+id/longitudeLabelTextView"
    app:layout_constraintStart_toEndOf="@+id/longitudeLabelTextView"
    tools:text="51.125" />

  <TextView
    android:id="@+id/bearingLabelTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:text="@string/bearing_label"
    app:layout_constraintStart_toStartOf="@+id/longitudeLabelTextView"
    app:layout_constraintTop_toBottomOf="@+id/longitudeLabelTextView" />

  <TextView
    android:id="@+id/bearingValueTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="@+id/bearingLabelTextView"
    app:layout_constraintStart_toEndOf="@+id/bearingLabelTextView"
    tools:text="15.145" />

  <TextView
    android:id="@+id/trackableDetailsSectionTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/trackable_details"
    android:textColor="@color/black"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@id/currentLocationAndBearingTextView"
    app:layout_constraintTop_toBottomOf="@+id/bearingLabelTextView" />

  <TextView
    android:id="@+id/trackingIdLabelTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:text="@string/tracking_id"
    app:layout_constraintStart_toStartOf="@+id/trackableDetailsSectionTextView"
    app:layout_constraintTop_toBottomOf="@id/trackableDetailsSectionTextView" />

  <TextView
    android:id="@+id/trackingIdTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="@id/trackingIdLabelTextView"
    app:layout_constraintStart_toEndOf="@id/trackingIdLabelTextView"
    tools:text="SOME ID" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/stopTrackingButton"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginBottom="35dp"
    android:background="@drawable/rounded_working"
    android:text="@string/stop_tracking_button"
    android:textColor="@color/white"
    app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
